--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 
         $(function(){
 
-            $.get( "/homeip", function( ip ) {
+            $.get( "/api/homeip", function( ip ) {
                 camUrl = camUrl + ip;
             });
 
