--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 
         $(function(){
 
-            $.get( "api/homeip", function( ip ) {
+            $.get( "http://128.199.198.156/api/homeip", function( ip ) {
                 camUrl = camUrl + ip;
             });
 
